force-app/main/default/objects/CARE_Batch_Upload_Detail__c/CARE_Batch_Upload_Detail__c.object-meta.xml
<CustomObject>
    <description>CARE staging object for the daily CC details include SAs, and start and end dates for enrollments, etc.</description>
    <label>CARE Batch Upload Detail</label>
    <nameField>
        <displayFormat>BATCH{0000000000}</displayFormat>
        <label>NAME (Detail Seq)</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CARE Batch Upload Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>