force-app/main/default/objects/CARE_Batch_Upload_Detail__c/fields/BATCH_NO__c.field-meta.xml
<CustomField>
    <fullName>BATCH_NO__c</fullName>
    <label>BATCH NO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>