force-app/main/default/objects/CARE_Batch_Upload_Detail__c/fields/BATCHUPLOAD__c.field-meta.xml
<CustomField>
    <fullName>BATCHUPLOAD__c</fullName>
    <label>BATCHUPLOAD</label>
    <referenceTo>CARE_BATCH_UPLOAD__c</referenceTo>
    <relationshipLabel>CARE Batch Upload Detail</relationshipLabel>
    <relationshipName>CARE_Batch_Upload_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>