force-app/main/default/objects/CARE_Batch_Upload_Detail__c/fields/CCB_CONTACT_COMMENT__c.field-meta.xml
<CustomField>
    <fullName>CCB_CONTACT_COMMENT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CCB CONTACT COMMENT</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>