force-app/main/default/objects/CARE_Batch_Upload_Detail__c/fields/HOME_PHONE__c.field-meta.xml
<CustomField>
    <fullName>HOME_PHONE__c</fullName>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <label>HOME PHONE</label>
    <length>24</length>
    <type>Text</type>
</CustomField>