force-app/main/default/objects/CARE_Batch_Upload_Detail__c/fields/PEV_CATEGORY_TYPE__c.field-meta.xml
<CustomField>
    <fullName>PEV_CATEGORY_TYPE__c</fullName>
    <label>PEV CATEGORY TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decile</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>High On Demand</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
            <value>
                <fullName>On Demand</fullName>
            </value>
            <value>
                <fullName>Random</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>