force-app/main/default/objects/CARE_Batch_Upload_Detail__c/fields/PEV_FILTER_REASON__c.field-meta.xml
<CustomField>
    <fullName>PEV_FILTER_REASON__c</fullName>
    <label>PEV FILTER REASON</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PEV Customer Filter Reason - Already V wi 45 days</fullName>
            </value>
            <value>
                <fullName>PEV Customer Filter Reason - Bad customer category</fullName>
            </value>
            <value>
                <fullName>PEV Customer Filter Reason - In LiHeap, EPO, REACH</fullName>
            </value>
            <value>
                <fullName>PEV Customer Filter Reason - Invalid Customer ID</fullName>
            </value>
            <value>
                <fullName>PEV Customer Filter Reason - Other</fullName>
            </value>
            <value>
                <fullName>PEV Customer Filter Reson - Notcurrently enrolled</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>