force-app/main/default/objects/CARE_Batch_Upload_Detail__c/fields/PROGRAM_TYPE__c.field-meta.xml
<CustomField>
    <fullName>PROGRAM_TYPE__c</fullName>
    <label>PROGRAM TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUTO EXTENSION</fullName>
            </value>
            <value>
                <fullName>AUTO TRANSFER</fullName>
            </value>
            <value>
                <fullName>CARE</fullName>
            </value>
            <value>
                <fullName>ESA</fullName>
            </value>
            <value>
                <fullName>LIHEAP</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>REACH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>