force-app/main/default/objects/CARE_Batch_Upload_Detail__c/fields/RECEIVED_BY__c.field-meta.xml
<CustomField>
    <fullName>RECEIVED_BY__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RECEIVED BY</label>
    <length>15</length>
    <type>Text</type>
</CustomField>