force-app/main/default/objects/CARE_Batch_Upload_Detail__c/fields/REMINDER_DATE__c.field-meta.xml
<CustomField>
    <fullName>REMINDER_DATE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>REMINDER DATE</label>
    <type>Date</type>
</CustomField>