force-app/main/default/objects/CARE_Batch_Upload_Detail__c/fields/USER_NAME_CARE1__c.field-meta.xml
<CustomField>
    <fullName>USER_NAME_CARE1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>USER NAME CARE1</label>
    <length>15</length>
    <type>Text</type>
</CustomField>